/*
 * $Id: ChangeLog,v 1.2546 2004/03/10 19:24:55 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-11 03:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/fparse.c
    ! empty string "" was translated as " ", chr(32), space. This is not
      correct. This change converts empty string to NULL, '\0'.

2004-03-11 02:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/dbdelim.prg
    * remove PRG sub-routine and unused variable for readability

  + source/rtl/dbdelim_old.prg
    % old version of dbdelim.prg for archive purposes

2004-03-10 11:24 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/gtwvt/gtwvt.c
    * Corrected typo.

  * source/rtl/win32ole.prg
    * Corrected &(HB_VM_STACK).Return to &( HB_VM_STACK.Return )

  * source/vm/classes.c
    + Added logic to SAVE value of HB_VM_STACK.Return before executing Destructor and restoring after.
    % Minor optimization

  * source/vm/hvm.c
    * Replaced hb_stackRemove(0) with plain reset of all items on stack to HB_IT_NIL,
      and reset of HB_VM_STACK.pPos to HB_VM_STACK.pItems - this removed GPF Trap related
      to execution of Destructors that might call ProcName() etc.. This is also more efficent
      because GC will perform any needed cleanup of complex items, which is much faster
      then indivifual hb_itemClear() on each item.

2004-03-11 08:15 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/achoice.prg
    - fix "CASE nKey == K_LBUTTONDOWN" where mouse clicked out of bounds

2004-03-10 21:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    * minor fix for MT compilation

2004-03-10 19:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/dbdelim.prg
    ! More enhancement by using C functions for APPENDTODB() and DBF2TEXT()